Correct dark mode colors

--- a/src/main/resources/static/koturno.main.css
+++ b/src/main/resources/static/koturno.main.css
@@ -3,15 +3,15 @@
 }
 
 .koturno-darkest {
-    background-color: #303030 !important;
+    background-color: #151515 !important;
 }
 
 .koturno-darker {
-    background-color: #414141 !important;
+    background-color: #171717 !important;
 }
 
 .koturno-dark {
-    background-color: #505050 !important;
+    background-color: #1a1a1a !important;
 }
 
 html,body {
